# omens

./: CLAUDE.md  Cargo.toml  plan.md  progress.md
scripts/: daily-report.sh  omens-daily-report.service  omens-daily-report.timer  omens-weekly-report.service  omens-weekly-report.timer  weekly-report.sh
skills/br-investing-pro/: SKILL.md
skills/browse/: SKILL.md
skills/use-omens/: SKILL.md
src/: analyze.rs  auth.rs  cli.rs  config.rs  main.rs
src/browse/: commands.rs  mod.rs  session.rs
src/browser/: harness.rs
src/chat/: agent.rs  mod.rs  tools.rs
src/cli/: commands.rs  mod.rs
src/explore/: fixtures.rs
src/runtime/: browser_manager.rs  display_manager.rs  mod.rs
src/store/: mod.rs
