[package]
name = "omens"
version = "0.1.0"
edition = "2024"

[dependencies]
chromiumoxide = "0.9.0"
futures-util = "0.3.32"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "rustls"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8", default-features = false, features = ["parse"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "time"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "rustls-tls", "builder"] }
